--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      # 환경 변수 설정
+      - name: Set up Environment
+        run: echo "${{ secrets.ENV_PROPERTIES }}" > ./.env
+
       # 빌드시 캐시 적용
       - name: Cache Gradle Packages
         uses: actions/cache@v3
