--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,9 @@
+spring:
+  config:
+    import: optional:file:.env[.properties]
+
 server:
-  port: 8080
+  port: ${SERVER_PORT}
   shutdown: graceful
 
 management:
