feat: Add environment field at docker files

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -19,3 +19,6 @@ services:
     image: ${DOCKER_IMAGE_NAME}
     ports:
       - ${DOCKER_SERVER_PORT}
+    environment:
+      SERVER_PORT: ${SERVER_PORT}
+
