--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
       - name: Set up Environment
         run: echo "${{ secrets.ENV_PROPERTIES }}" > ./.env
 
+      # docker로 Test용 mysql 띄우기
+      - name: Create Mysql Docker Container
+        run: sudo docker run -d -p 3306:3306 --env MYSQL_DATABASE="${{ secrets.TEST_DATABASE }}" --env MYSQL_ROOT_PASSWORD="${{ secrets.TEST_DATASOURCE_PASSWORD }}" mysql:8.0.31
+
       # 빌드시 캐시 적용
       - name: Cache Gradle Packages
         uses: actions/cache@v3
