setting: JWT 라이브러리 추가 및 설정 (#8)
* setting: JWT 라이브러리 추가 및 설정

* setting: jpa dialect 설정 추가

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,11 @@ server:
 spring:
   profiles:
     active: local
+    include:
+      - security
 
   jpa:
+    database-platform: org.hibernate.dialect.MySQLDialect
     open-in-view: false
     show-sql: true
     properties:
