feat: 유효하지 않은 토큰, 만료된 토큰의 경우 예외를 발생시킨다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,10 +3,12 @@ server:
   shutdown: graceful
 
 spring:
+  config:
+    import: optional:file:.env[.properties]
+
   profiles:
     active: local
-    include:
-      - security
+    include: security
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
