feat: S3 라이브러리 추가 및 NCP key 등록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,7 +8,9 @@ spring:
 
   profiles:
     active: local
-    include: security
+    include:
+    - security
+    - cloud
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
