feat: 배포 테스트를 위해 github action trigger를 변경한다.

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -21,4 +21,7 @@ services:
       - ${DOCKER_SERVER_PORT}
     environment:
       SERVER_PORT: ${SERVER_PORT}
-
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+      NCP_ACCESS_KEY: ${NCP_ACCESS_KEY}
+      NCP_SECRET_KEY: ${NCP_SECRET_KEY}
+      ACTIVE_PROFILE: ${ACTIVE_PROFILE}
