--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,13 +5,13 @@ spring:
     show-sql: true
     properties:
       format_sql: true
-      hibernate.hbm2ddl.auto: create
+      hibernate.hbm2ddl.auto: update
 
 # db 설정
 datasource:
   db:
     pool-name: moneymong
-    jdbc-url: jdbc:mysql://localhost:3306/moneymong?useSSL=false&&allowPublicKeyRetrieval=true
+    jdbc-url: jdbc:mysql://127.0.0.1:3306/moneymong?useSSL=false&&allowPublicKeyRetrieval=true
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
