--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
 
       # 환경 변수 설정
       - name: Set up Environment
-        run: echo "${{ secrets.ENV_PROPERTIES }}" > ./.env
+        run: echo "${{ secrets.ENV_PROPERTIES_LOCAL }}" > ./.env
 
       # docker로 Test용 mysql 띄우기
       - name: Create Mysql Docker Container
