chore: application.yml 정리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,8 +5,14 @@ server:
 spring:
   config:
     import: optional:file:.env[.properties]
+
   profiles:
     active: ${ACTIVE_PROFILE}
+
+  servlet:
+    multipart:
+      max-request-size: 10MB
+      max-file-size: 10MB
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
@@ -39,3 +45,18 @@ springdoc:
       enabled: true
   cache:
     disabled: true
+
+# Cloud
+cloud:
+  ncp:
+    s3:
+      bucket: moneymong
+      endpoint: "https://kr.object.ncloudstorage.com"
+    credentials:
+      access-key: ${NCP_ACCESS_KEY}
+      secret-key: ${NCP_SECRET_KEY}
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
