feat: Swagger 설정 추가 및 application.yml 분리 (#13)
* setting: application.yml을 profile로 분리한다.

* feat: Swagger 설정을 추가한다.

* feat: 배포 테스트를 위해 github action trigger를 변경한다.

* chore: ddl auto 설정 변경

* chore: fix deploy setting

* chore: application.yml 정리

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,6 @@
 FROM openjdk:17-oracle
 ARG JAR_FILE=build/libs/moneymong-0.0.1.jar
+ENV ACTIVE_PROFILE=${ACTIVE_PROFILE} \
+DB_URL=${DB_URL}
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=${ACTIVE_PROFILE}", "-jar","/app.jar"]
