feat: application.yml에 oauth 설정 추가

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -25,4 +25,6 @@ services:
       NCP_SECRET_KEY: ${NCP_SECRET_KEY}
       ACTIVE_PROFILE: ${ACTIVE_PROFILE}
       DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      DB_URL: ${DB_URL}
+      KAKAO_CLIENT_ID: ${KAKAO_CLIENT_ID}
+      KAKAO_CLIENT_SECRET: ${KAKAO_CLIENT_SECRET}
+      KAKAO_REDIRECT_URI: ${KAKAO_REDIRECT_URI}
