--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,7 +5,7 @@ spring:
     show-sql: true
     properties:
       format_sql: true
-      hibernate.hbm2ddl.auto: create
+      hibernate.hbm2ddl.auto: update
 
   security:
     oauth2:
@@ -13,12 +13,12 @@ spring:
         registration:
           kakao:
             client-name: kakao
-            client-id: ${KAKAO_CLIENT_ID}
-            client-secret: ${KAKAO_CLIENT_SECRET}
+            client-id: ${LOCAL_KAKAO_CLIENT_ID}
+            client-secret: ${LOCAL_KAKAO_CLIENT_SECRET}
             scope:
               - profile_nickname
               - profile_image
-            redirect-uri: ${KAKAO_REDIRECT_URI}
+            redirect-uri: ${LOCAL_KAKAO_REDIRECT_URI}
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_post
         provider:
