--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -17,7 +17,7 @@ spring:
             client-secret: ${LOCAL_KAKAO_CLIENT_SECRET}
             scope:
               - profile_nickname
-              - profile_image
+              - account_email
             redirect-uri: ${LOCAL_KAKAO_REDIRECT_URI}
             authorization-grant-type: authorization_code
             client-authentication-method: client_secret_post
