--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -65,5 +65,5 @@ jwt:
   issuer: MONEYMONG
   secret-key: ${JWT_SECRET_KEY}
   expiry-seconds:
-    access-token: 1800
+    access-token: 315576000
     refresh-token: 1209600
