feat: P6spy 의존성을 추가한다.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -60,3 +60,9 @@ cloud:
       auto: false
     stack:
       auto: false
+
+# P6spy
+decorator:
+  datasource:
+    p6spy:
+      enable-logging: true
