--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,6 @@ dependencies {
 	// Cloud
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-
 	// 기타
 	implementation platform("com.fasterxml.jackson:jackson-bom:2.14.0")
 	implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
@@ -62,6 +61,9 @@ dependencies {
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
+	// P6spy
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
