--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,24 +9,8 @@ spring:
 
   security:
     oauth2:
-      client:
-        registration:
-          kakao:
-            client-name: kakao
-            client-id: ${KAKAO_CLIENT_ID}
-            client-secret: ${KAKAO_CLIENT_SECRET}
-            scope:
-              - profile_nickname
-              - account_email
-            redirect-uri: ${KAKAO_REDIRECT_URI}
-            authorization-grant-type: authorization_code
-            client-authentication-method: client_secret_post
-        provider:
-          kakao:
-            authorization-uri: https://kauth.kakao.com/oauth/authorize
-            token-uri: https://kauth.kakao.com/oauth/token
-            user-info-uri: https://kapi.kakao.com/v2/user/me
-            user-name-attribute: id
+      kakao:
+        host: https://kapi.kakao.com
 
 # db 설정
 datasource:
