setting: docker에 redis 설정을 추가한다.

--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -28,3 +28,11 @@ services:
       KAKAO_CLIENT_ID: ${KAKAO_CLIENT_ID}
       KAKAO_CLIENT_SECRET: ${KAKAO_CLIENT_SECRET}
       KAKAO_REDIRECT_URI: ${KAKAO_REDIRECT_URI}
+
+  redis:
+    container_name: moneymong-redis
+    image: redis
+    ports:
+      - "6379:6379"
+    volumes:
+      - ./data/redis:/data
