--- a/build.gradle
+++ b/build.gradle
@@ -63,7 +63,10 @@ dependencies {
 
 	// P6spy
 	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0'
-	
+
+	// redis
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
