setting: yml에 host와 port를 추가한다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -12,6 +12,11 @@ spring:
       kakao:
         host: https://kapi.kakao.com
 
+  data:
+    redis:
+      host: ${REDIS_HOST}
+      port: ${REDIS_PORT}
+
 # db 설정
 datasource:
   db:
