chore: JWT AccessToken의 만료시간을 30분으로 설정한다.

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -54,5 +54,5 @@ jwt:
   issuer: MONEYMONG
   secret-key: ${JWT_SECRET_KEY}
   expiry-seconds:
-    access-token: 31557600
+    access-token: 1800
     refresh-token: 1209600
