--- a/build.gradle
+++ b/build.gradle
@@ -33,8 +33,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
-	// Actuator
+	// Prometheus
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
+	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 
 	// JWT
 	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
