setting: actuator 설정 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,9 +26,9 @@ spring:
 management:
   endpoints:
     web:
-      base-path: /
       exposure:
-        include: health
+        include: "*"
+        exclude: env, beans
 
 # swagger
 springdoc:
