--- a/.docker/docker-compose.yml
+++ b/.docker/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     ports:
       - ${DOCKER_DB_PORT}
     volumes:
-      - ./mysqldata:/var/lib/mysql
+      - ./mysqldata:/var/lib/mysql2
     restart: always
 
   server:
@@ -25,9 +25,6 @@ services:
       NCP_SECRET_KEY: ${NCP_SECRET_KEY}
       ACTIVE_PROFILE: ${ACTIVE_PROFILE}
       DB_ROOT_PASSWORD: ${DB_ROOT_PASSWORD}
-      KAKAO_CLIENT_ID: ${KAKAO_CLIENT_ID}
-      KAKAO_CLIENT_SECRET: ${KAKAO_CLIENT_SECRET}
-      KAKAO_REDIRECT_URI: ${KAKAO_REDIRECT_URI}
       REDIS_HOST: ${REDIS_HOST}
       REDIS_PORT: ${REDIS_PORT}
 
