--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -1,9 +1,9 @@
-name: deploy to dev
+name: deploy to prod
 
 on:
   push:
     branches:
-      - dev
+      - main
 
 # 권한 설정
 permissions:
@@ -24,15 +24,15 @@ jobs:
 
       # 환경 변수 설정
       - name: Set up Environment
-        run: echo "${{ secrets.ENV_PROPERTIES_DEV }}" > ./.env
+        run: echo "${{ secrets.ENV_PROPERTIES_PROD }}" > ./.env
 
       # 환경 변수 파일 서버로 전달
       - name: Send env file
         uses: appleboy/scp-action@master
         with:
           username: ${{ secrets.USERNAME }}
-          host: ${{ secrets.NCP_HOST }}
-          password: ${{ secrets.NCP_PASSWORD }}
+          host: ${{ secrets.NCP_PROD_HOST }}
+          password: ${{ secrets.NCP_PROD_PASSWORD }}
           source: "./.env"
           target: "/home/ubuntu"
 
@@ -56,8 +56,8 @@ jobs:
         uses: appleboy/scp-action@master
         with:
           username: ${{ secrets.USERNAME }}
-          host: ${{ secrets.NCP_HOST }}
-          password: ${{ secrets.NCP_PASSWORD }}
+          host: ${{ secrets.NCP_PROD_HOST }}
+          password: ${{ secrets.NCP_PROD_PASSWORD }}
           port: 22
           source: "./.docker/docker-compose.yml"
           target: "/home/ubuntu/"
@@ -67,8 +67,8 @@ jobs:
         uses: appleboy/ssh-action@master
         with:
           username: ${{ secrets.USERNAME }}
-          host: ${{ secrets.NCP_HOST }}
-          password: ${{ secrets.NCP_PASSWORD }}
+          host: ${{ secrets.NCP_PROD_HOST }}
+          password: ${{ secrets.NCP_PROD_PASSWORD }}
           script: |
             sudo cp /home/ubuntu/.docker/docker-compose.yml /home/ubuntu
             cd /home/ubuntu
