--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,7 +11,8 @@ spring:
     oauth2:
       kakao:
         host: https://kapi.kakao.com
-
+      apple:
+        host: https://appleid.apple.com
   data:
     redis:
       host: ${REDIS_HOST}
