--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -13,6 +13,11 @@ spring:
         host: https://kapi.kakao.com
       apple:
         host: https://appleid.apple.com
+        grant-type: authorization_code
+        client-id: ${APPLE_CLIENT_ID}
+        key-id: ${APPLE_KEY_ID}
+        team-id: ${APPLE_TEAM_ID}
+        private-key: ${APPLE_PRIVATE_KEY}
 
   data:
     redis:
