feat: 회원탈퇴 api v2를 추가한다.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,9 @@ name: gradle build
 
 on:
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
+      - dev
 
 # 권한 설정
 permissions: write-all
